- */*.c - replaced GNU extension '\e' by the proper ANSI '\033' (LVL)
- cli/coma.S - fixed bug preventing EmuCON usage from the desktop (LVL)
- bios/vectors.S - stack restored before jumping in dopanic() (LVL)
- bios/panicasm.S - made panic message a little bit more robust (LVL)
- bios/kprint.c - fixed dopanic() (LVL)

2003-04-21
- bios/initinfo.c bios/bios.c - hitting 'C' during initinfo launches an early
  EmuCON, as a first step towards what Petr really wants (?) (LVL)
- Makefile - bug no longer unnecessarily built when making UNIQUE=us (LVL)
- cli/command.c - implemented prototypes for gemdos bindings (LVL)
- bdos/fs.h - fixed DTA.dt_fname: the correct size is 14 bytes, not 12 (LVL)

2003-04-22
- aes/gemshlib.c, aes/gemstart.S, aes/gemdos.c : Fixed problem with shel_write
  when parameter isover was 0. (shel_write on the Atari-GEM does not execute a
  program directly!). I also included a new dos_exec function that makes the
  handling of the rlr->p_uda->u_spsuper problem much more easier (the new
  dos_exec has basically been taken from the old Lisa-GEM). (THH)

2003-04-24
- aes/gemsuper.c, aes/crysbind.h, aes/gemwmlib.c : Added wind_new() function
  (called wm_new internally). TeraDesk seems now to be working fine. (THH)

2003-05-01
- doc/authors.txt - historic part fixed (LVL)

2003-05-05
- bdos/* - minor header cleaning (LVL)
- desk/desk_rsc.c bios/initinfo.h include/version.h - version consistently
  extracted from the changelog; EmuTOS URL added in about dialog (LVL)
- doc/changelog.txt - converted dates to ISO YYYY-MM-DD format (LVL)
- desk/desk_rsc.c - menu sizes adjusted so that they fit in the screen (LVL)

2003-05-11
- bdos/bdosmain.c : Changed the GEMDOS version to a more reasonable number
  since some programs might depend on this value. (THH)

2003-05-13
- bdos/proc.c : Registers are now initialized to 0 again in proc_go() since
  some programs need A0 = 0 to test if they are running as a normal program
  or as an accessory. (THH)